# PokeTraining

./: README.md
PokemonRojo/: CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt  requirements.txt
PokemonRojo/configs/: advanced.json  exploration.json
PokemonRojo/data/: README.md
PokemonRojo/data/roms/: README.md
PokemonRojo/docs/: methodology.md  provenance.md  results.md
PokemonRojo/notebooks/: PokeTraining.ipynb
PokemonRojo/notebooks/archive/: PokeTraining_original.ipynb
PokemonRojo/results/: README.md  legacy_run.json
PokemonRojo/src/poketraining/: __init__.py  __main__.py  cli.py  config.py  emulator.py  memory.py  model.py  replay.py  reporting.py  rewards.py  trainer.py
PokemonRojo/tests/: conftest.py  test_cli.py  test_config.py  test_emulator.py  test_memory.py  test_model.py  test_replay.py  test_reporting.py  test_rewards.py  test_trainer.py
